app/otel/k8s/frontend/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opentelemetry-demo-frontendproxy
  labels:
    app: frontendproxy
    app.kubernetes.io/component: frontendproxy
    app.kubernetes.io/part-of: opentelemetry-demo

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontendproxy

  template:
    metadata:
      labels:
        app: frontendproxy

    spec:
      serviceAccountName: opentelemetry-demo

      containers:
      - name: frontendproxy
        image: ghcr.io/open-telemetry/demo:1.12.0-frontendproxy
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 8080
          name: http

        resources:
          limits:
            memory: 50Mi

        securityContext:
          runAsUser: 101
          runAsGroup: 101
          runAsNonRoot: true
      
---

apiVersion: v1
kind: Service

metadata:
  name: opentelemetry-demo-frontendproxy
  labels:
    app: frontendproxy

spec:
  type: ClusterIP

  selector:
    app: frontendproxy

  ports:
  - name: http
    port: 8080
    targetPort: 8080
